# codtrackerbot

./: .gitignore  README.md  pyproject.toml
codtrackerbot/: main.py  settings.py
codtrackerbot/cogs/: command_err_handler.py  dummy.py  wzstats.py
codtrackerbot/models/: codtrackermodel.py
